cluster/gateway-api/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: coinhub
  namespace: gateway
  annotations:
    networking.istio.io/service-type: LoadBalancer # ClusterIP
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: "*.coinhub.kevinnitro.duckdns.org"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              coinhub-gateway: "true"
